--- a/Notebooks/T1 - 1 - Read modes.ipynb
+++ b/Notebooks/T1 - 1 - Read modes.ipynb
@@ -209,212 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>State</th>\n",
-       "      <th>Account Length</th>\n",
-       "      <th>Area Code</th>\n",
-       "      <th>Phone</th>\n",
-       "      <th>Int'l Plan</th>\n",
-       "      <th>VMail Plan</th>\n",
-       "      <th>VMail Message</th>\n",
-       "      <th>Day Mins</th>\n",
-       "      <th>Day Calls</th>\n",
-       "      <th>Day Charge</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Eve Calls</th>\n",
-       "      <th>Eve Charge</th>\n",
-       "      <th>Night Mins</th>\n",
-       "      <th>Night Calls</th>\n",
-       "      <th>Night Charge</th>\n",
-       "      <th>Intl Mins</th>\n",
-       "      <th>Intl Calls</th>\n",
-       "      <th>Intl Charge</th>\n",
-       "      <th>CustServ Calls</th>\n",
-       "      <th>Churn?</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>KS</td>\n",
-       "      <td>128</td>\n",
-       "      <td>415</td>\n",
-       "      <td>382-4657</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>25</td>\n",
-       "      <td>265.1</td>\n",
-       "      <td>110</td>\n",
-       "      <td>45.07</td>\n",
-       "      <td>...</td>\n",
-       "      <td>99</td>\n",
-       "      <td>16.78</td>\n",
-       "      <td>244.7</td>\n",
-       "      <td>91</td>\n",
-       "      <td>11.01</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>OH</td>\n",
-       "      <td>107</td>\n",
-       "      <td>415</td>\n",
-       "      <td>371-7191</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>26</td>\n",
-       "      <td>161.6</td>\n",
-       "      <td>123</td>\n",
-       "      <td>27.47</td>\n",
-       "      <td>...</td>\n",
-       "      <td>103</td>\n",
-       "      <td>16.62</td>\n",
-       "      <td>254.4</td>\n",
-       "      <td>103</td>\n",
-       "      <td>11.45</td>\n",
-       "      <td>13.7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>False.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NJ</td>\n",
-       "      <td>137</td>\n",
-       "      <td>415</td>\n",
-       "      <td>358-1921</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>0</td>\n",
-       "      <td>243.4</td>\n",
-       "      <td>114</td>\n",
-       "      <td>41.38</td>\n",
-       "      <td>...</td>\n",
-       "      <td>110</td>\n",
-       "      <td>10.30</td>\n",
-       "      <td>162.6</td>\n",
-       "      <td>104</td>\n",
-       "      <td>7.32</td>\n",
-       "      <td>12.2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3.29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>False.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>OH</td>\n",
-       "      <td>84</td>\n",
-       "      <td>408</td>\n",
-       "      <td>375-9999</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>0</td>\n",
-       "      <td>299.4</td>\n",
-       "      <td>71</td>\n",
-       "      <td>50.90</td>\n",
-       "      <td>...</td>\n",
-       "      <td>88</td>\n",
-       "      <td>5.26</td>\n",
-       "      <td>196.9</td>\n",
-       "      <td>89</td>\n",
-       "      <td>8.86</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>2</td>\n",
-       "      <td>False.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>OK</td>\n",
-       "      <td>75</td>\n",
-       "      <td>415</td>\n",
-       "      <td>330-6626</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>0</td>\n",
-       "      <td>166.7</td>\n",
-       "      <td>113</td>\n",
-       "      <td>28.34</td>\n",
-       "      <td>...</td>\n",
-       "      <td>122</td>\n",
-       "      <td>12.61</td>\n",
-       "      <td>186.9</td>\n",
-       "      <td>121</td>\n",
-       "      <td>8.41</td>\n",
-       "      <td>10.1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.73</td>\n",
-       "      <td>3</td>\n",
-       "      <td>False.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  State  Account Length  Area Code     Phone Int'l Plan VMail Plan  \\\n",
-       "0    KS             128        415  382-4657         no        yes   \n",
-       "1    OH             107        415  371-7191         no        yes   \n",
-       "2    NJ             137        415  358-1921         no         no   \n",
-       "3    OH              84        408  375-9999        yes         no   \n",
-       "4    OK              75        415  330-6626        yes         no   \n",
-       "\n",
-       "   VMail Message  Day Mins  Day Calls  Day Charge  ...  Eve Calls  Eve Charge  \\\n",
-       "0             25     265.1        110       45.07  ...         99       16.78   \n",
-       "1             26     161.6        123       27.47  ...        103       16.62   \n",
-       "2              0     243.4        114       41.38  ...        110       10.30   \n",
-       "3              0     299.4         71       50.90  ...         88        5.26   \n",
-       "4              0     166.7        113       28.34  ...        122       12.61   \n",
-       "\n",
-       "   Night Mins  Night Calls  Night Charge  Intl Mins  Intl Calls  Intl Charge  \\\n",
-       "0       244.7           91         11.01       10.0           3         2.70   \n",
-       "1       254.4          103         11.45       13.7           3         3.70   \n",
-       "2       162.6          104          7.32       12.2           5         3.29   \n",
-       "3       196.9           89          8.86        6.6           7         1.78   \n",
-       "4       186.9          121          8.41       10.1           3         2.73   \n",
-       "\n",
-       "   CustServ Calls  Churn?  \n",
-       "0               1  False.  \n",
-       "1               1  False.  \n",
-       "2               0  False.  \n",
-       "3               2  False.  \n",
-       "4               3  False.  \n",
-       "\n",
-       "[5 rows x 21 columns]"
-      ]
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>State</th>\n      <th>Account Length</th>\n      <th>Area Code</th>\n      <th>Phone</th>\n      <th>Int'l Plan</th>\n      <th>VMail Plan</th>\n      <th>VMail Message</th>\n      <th>Day Mins</th>\n      <th>Day Calls</th>\n      <th>Day Charge</th>\n      <th>...</th>\n      <th>Eve Calls</th>\n      <th>Eve Charge</th>\n      <th>Night Mins</th>\n      <th>Night Calls</th>\n      <th>Night Charge</th>\n      <th>Intl Mins</th>\n      <th>Intl Calls</th>\n      <th>Intl Charge</th>\n      <th>CustServ Calls</th>\n      <th>Churn?</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>KS</td>\n      <td>128</td>\n      <td>415</td>\n      <td>382-4657</td>\n      <td>no</td>\n      <td>yes</td>\n      <td>25</td>\n      <td>265.1</td>\n      <td>110</td>\n      <td>45.07</td>\n      <td>...</td>\n      <td>99</td>\n      <td>16.78</td>\n      <td>244.7</td>\n      <td>91</td>\n      <td>11.01</td>\n      <td>10.0</td>\n      <td>3</td>\n      <td>2.70</td>\n      <td>1</td>\n      <td>False.</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>OH</td>\n      <td>107</td>\n      <td>415</td>\n      <td>371-7191</td>\n      <td>no</td>\n      <td>yes</td>\n      <td>26</td>\n      <td>161.6</td>\n      <td>123</td>\n      <td>27.47</td>\n      <td>...</td>\n      <td>103</td>\n      <td>16.62</td>\n      <td>254.4</td>\n      <td>103</td>\n      <td>11.45</td>\n      <td>13.7</td>\n      <td>3</td>\n      <td>3.70</td>\n      <td>1</td>\n      <td>False.</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>NJ</td>\n      <td>137</td>\n      <td>415</td>\n      <td>358-1921</td>\n      <td>no</td>\n      <td>no</td>\n      <td>0</td>\n      <td>243.4</td>\n      <td>114</td>\n      <td>41.38</td>\n      <td>...</td>\n      <td>110</td>\n      <td>10.30</td>\n      <td>162.6</td>\n      <td>104</td>\n      <td>7.32</td>\n      <td>12.2</td>\n      <td>5</td>\n      <td>3.29</td>\n      <td>0</td>\n      <td>False.</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>OH</td>\n      <td>84</td>\n      <td>408</td>\n      <td>375-9999</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>0</td>\n      <td>299.4</td>\n      <td>71</td>\n      <td>50.90</td>\n      <td>...</td>\n      <td>88</td>\n      <td>5.26</td>\n      <td>196.9</td>\n      <td>89</td>\n      <td>8.86</td>\n      <td>6.6</td>\n      <td>7</td>\n      <td>1.78</td>\n      <td>2</td>\n      <td>False.</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>OK</td>\n      <td>75</td>\n      <td>415</td>\n      <td>330-6626</td>\n      <td>yes</td>\n      <td>no</td>\n      <td>0</td>\n      <td>166.7</td>\n      <td>113</td>\n      <td>28.34</td>\n      <td>...</td>\n      <td>122</td>\n      <td>12.61</td>\n      <td>186.9</td>\n      <td>121</td>\n      <td>8.41</td>\n      <td>10.1</td>\n      <td>3</td>\n      <td>2.73</td>\n      <td>3</td>\n      <td>False.</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 21 columns</p>\n</div>",
+      "text/plain": "  State  Account Length  Area Code     Phone Int'l Plan VMail Plan  \\\n0    KS             128        415  382-4657         no        yes   \n1    OH             107        415  371-7191         no        yes   \n2    NJ             137        415  358-1921         no         no   \n3    OH              84        408  375-9999        yes         no   \n4    OK              75        415  330-6626        yes         no   \n\n   VMail Message  Day Mins  Day Calls  Day Charge  ...  Eve Calls  Eve Charge  \\\n0             25     265.1        110       45.07  ...         99       16.78   \n1             26     161.6        123       27.47  ...        103       16.62   \n2              0     243.4        114       41.38  ...        110       10.30   \n3              0     299.4         71       50.90  ...         88        5.26   \n4              0     166.7        113       28.34  ...        122       12.61   \n\n   Night Mins  Night Calls  Night Charge  Intl Mins  Intl Calls  Intl Charge  \\\n0       244.7           91         11.01       10.0           3         2.70   \n1       254.4          103         11.45       13.7           3         3.70   \n2       162.6          104          7.32       12.2           5         3.29   \n3       196.9           89          8.86        6.6           7         1.78   \n4       186.9          121          8.41       10.1           3         2.73   \n\n   CustServ Calls  Churn?  \n0               1  False.  \n1               1  False.  \n2               0  False.  \n3               2  False.  \n4               3  False.  \n\n[5 rows x 21 columns]"
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +999,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
